bdr.BDR.scala.error
Compilation error:
BDR:1: error: not found: value ind
while (ind!=' ') {
       ^